--- a/src/app/component/proveedor/proveedor.admin.create.routed/proveedor.admin.create.routed.component.html
+++ b/src/app/component/proveedor/proveedor.admin.create.routed/proveedor.admin.create.routed.component.html
@@ -71,6 +71,26 @@
             }
           </mat-form-field>
 
+
+          <div formGroupName="tipoproveedor">
+            <div class="row mt-4">
+                <mat-form-field>
+                    <mat-label>Tipo Proveedor</mat-label>
+                    <div class="d-flex justify-content-end">
+                        <button class="btn btn-primary" (click)="showTipoProveedorSelectorModal()">
+                            <i class="bi bi-search"></i>
+                            Buscar
+                        </button>
+                    </div>
+                    <div class="d-flex justify-content-start">
+                        {{oTipoProveedor.descripcion}}
+                    </div>
+
+                    <input matInput formControlName="id" placeholder="Tipo Proveedor" />
+                </mat-form-field>
+            </div>
+          </div>
+
           <!-- Imagen -->
           <div class="w-100 mb-3">
             <label for="imagen" class="form-label">Imagen del Proveedor</label>
