--- a/src/app/component/proveedor/proveedor.admin.edit.routed/proveedor.admin.edit.routed.component.html
+++ b/src/app/component/proveedor/proveedor.admin.edit.routed/proveedor.admin.edit.routed.component.html
@@ -9,7 +9,11 @@
           </h2>
         </div>
         <div class="card-body">
-          <form [formGroup]="oProveedorForm!" (ngSubmit)="onSubmit()" novalidate>
+          <form
+            [formGroup]="oProveedorForm!"
+            (ngSubmit)="onSubmit()"
+            novalidate
+          >
             <!-- ID -->
             <div class="mb-3">
               <label for="id" class="form-label fw-bold">ID</label>
@@ -21,8 +25,10 @@
                 placeholder="id"
                 readonly
               />
-              <div *ngIf="oProveedorForm?.get('id')?.errors" class="text-danger">
-              </div>
+              <div
+                *ngIf="oProveedorForm?.get('id')?.errors"
+                class="text-danger"
+              ></div>
             </div>
 
             <!-- Empresa -->
@@ -35,14 +41,23 @@
                 formControlName="empresa"
                 placeholder="Empresa"
               />
-              <div *ngIf="oProveedorForm?.get('empresa')?.errors" class="text-danger">
-                <small *ngIf="oProveedorForm?.get('empresa')?.hasError('required')">
+              <div
+                *ngIf="oProveedorForm?.get('empresa')?.errors"
+                class="text-danger"
+              >
+                <small
+                  *ngIf="oProveedorForm?.get('empresa')?.hasError('required')"
+                >
                   Debes introducir una empresa.
                 </small>
-                <small *ngIf="oProveedorForm?.get('empresa')?.hasError('minlength')">
+                <small
+                  *ngIf="oProveedorForm?.get('empresa')?.hasError('minlength')"
+                >
                   La empresa es demasiado corta.
                 </small>
-                <small *ngIf="oProveedorForm?.get('empresa')?.hasError('maxlength')">
+                <small
+                  *ngIf="oProveedorForm?.get('empresa')?.hasError('maxlength')"
+                >
                   La empresa es demasiado larga.
                 </small>
               </div>
@@ -58,14 +73,23 @@
                 formControlName="email"
                 placeholder="Email"
               />
-              <div *ngIf="oProveedorForm?.get('email')?.errors" class="text-danger">
-                <small *ngIf="oProveedorForm?.get('email')?.hasError('required')">
+              <div
+                *ngIf="oProveedorForm?.get('email')?.errors"
+                class="text-danger"
+              >
+                <small
+                  *ngIf="oProveedorForm?.get('email')?.hasError('required')"
+                >
                   Debes introducir un email.
                 </small>
-                <small *ngIf="oProveedorForm?.get('email')?.hasError('minlength')">
+                <small
+                  *ngIf="oProveedorForm?.get('email')?.hasError('minlength')"
+                >
                   El email es demasiado corto.
                 </small>
-                <small *ngIf="oProveedorForm?.get('email')?.hasError('maxlength')">
+                <small
+                  *ngIf="oProveedorForm?.get('email')?.hasError('maxlength')"
+                >
                   El email es demasiado largo.
                 </small>
               </div>
@@ -81,18 +105,46 @@
                 formControlName="password"
                 placeholder="Password"
               />
-              <div *ngIf="oProveedorForm?.get('password')?.errors" class="text-danger">
-                <small *ngIf="oProveedorForm?.get('password')?.hasError('required')">
+              <div
+                *ngIf="oProveedorForm?.get('password')?.errors"
+                class="text-danger"
+              >
+                <small
+                  *ngIf="oProveedorForm?.get('password')?.hasError('required')"
+                >
                   Debes introducir una contraseña.
                 </small>
-                <small *ngIf="oProveedorForm?.get('password')?.hasError('minlength')">
+                <small
+                  *ngIf="oProveedorForm?.get('password')?.hasError('minlength')"
+                >
                   La contraseña es demasiado corta.
                 </small>
-                <small *ngIf="oProveedorForm?.get('password')?.hasError('maxlength')">
+                <small
+                  *ngIf="oProveedorForm?.get('password')?.hasError('maxlength')"
+                >
                   La contraseña es demasiado larga.
                 </small>
               </div>
             </div>
+
+            <div formGroupName="tipoproveedor">
+            <div class="row mt-4">
+                <mat-form-field>
+                    <mat-label>Tipo Proveedor</mat-label>
+                    <div class="d-flex justify-content-end">
+                        <button class="btn btn-primary" (click)="showTipoProveedorSelectorModal()">
+                            <i class="bi bi-search"></i>
+                            Buscar
+                        </button>
+                    </div>
+                    <div class="d-flex justify-content-start">
+                        {{oTipoProveedor.descripcion}}
+                    </div>
+
+                    <input matInput formControlName="id" placeholder="Tipo Proveedor" />
+                </mat-form-field>
+            </div>
+          </div>
 
             <!-- Imagen actual -->
             <div class="mb-4">
@@ -104,8 +156,10 @@
                   *ngIf="imagen"
                   [src]="imagen"
                   alt="Imagen del producto"
-                  class="w-40 h-56 rounded-lg shadow-md"
+                  style="width: 120px; height: 120px; object-fit: cover"
+                  class="rounded shadow"
                 />
+
                 <p *ngIf="!imagen" class="text-gray-500">
                   Imagen no disponible
                 </p>
