--- a/src/app/component/tipoproducto/tipoproductoselector/tipoproductoselector.component.html
+++ b/src/app/component/tipoproducto/tipoproductoselector/tipoproductoselector.component.html
@@ -3,13 +3,10 @@
     <div class="col text-center">
       <h2 class="my-2">
         <i class="bi bi-list"></i>
-        Lista de Proveedores
-        <i class="bi bi-person-circle"></i>
+        Selector de tipo de Producto
+        <i class="bi bi-credit-card-fill"></i>
+        <button type="button" class="btn-close position-absolute top-0 end-0 m-3" aria-label="Cerrar" (click)="dialogRef.close()"></button>
       </h2>
-      <a href="/admin/proveedor/create"><button class="btn btn-primary my-2 mx-2">
-          <i class="bi bi-plus-square"></i>
-          Crear nuevo proveedor
-        </button></a>
 
       <div class="d-inline-flex mx-2">
         <input type="text" class="form-control" placeholder="Buscar" (keyup)="filter($event)" [(ngModel)]="strFiltro" />
@@ -73,7 +70,7 @@
       </div>
 
       <div class="d-flex flex-column">
-        <table class="table table-striped table-bordered my-8"
+        <table class="table table-striped table-bordered my-2"
           style="table-layout: fixed; width: 100%; word-break: break-all">
           <thead>
             <tr>
@@ -83,60 +80,38 @@
                 } @else {
                 <i class="bi bi-caret-up-fill"></i>} }
               </th>
-              <th (click)="sort('empresa')" class="bg-primary text-white">
-                Empresa @if (strField === 'empresa') { @if (strDir === 'desc') {
+              <th (click)="sort('descripcion')" class="bg-primary text-white">
+                Descripcion @if (strField === 'descripcion') { @if (strDir ===
+                'desc') {
                 <i class="bi bi-caret-down-fill"></i>
                 } @else {
                 <i class="bi bi-caret-up-fill"></i>} }
               </th>
-              <th (click)="sort('email')" class="bg-primary text-white">
-                Email @if (strField === 'email') { @if (strDir === 'desc') {
-                <i class="bi bi-caret-down-fill"></i>
-                } @else {
-                <i class="bi bi-caret-up-fill"></i>} }
-              </th>
-              <th (click)="sort('tipoproveedor')" class="bg-primary text-white">
-                Tipo de Proveedor @if (strField === 'tipoproveedor') { @if (strDir === 'desc') {
-                <i class="bi bi-caret-down-fill"></i>
-                } @else {
-                <i class="bi bi-caret-up-fill"></i>} }
-              </th>
+              
               <th class="bg-warning text-black">Acciones</th>
             </tr>
           </thead>
 
           <tbody>
-            @for (oProveedor of oPage?.content; track oProveedor.id) {
+            @for (tipoProducto of oPage?.content; track tipoProducto.id) {
             <tr>
-              <td class="text-center">{{ oProveedor.id }}</td>
-              <td class="text-start">{{ oProveedor.empresa }}</td>
-              <td class="text-start">{{ oProveedor.email }}</td>
+              <td class="text-center">{{ tipoProducto.id }}</td>
               <td class="text-start">
-                @if (oProveedor.tipoproveedor) {
-                  {{ oProveedor.tipoproveedor.descripcion }} ID: {{ oProveedor.tipoproveedor.id }}
-                } @else {
-                  <span class="text-muted">Sin tipo de proveedor asignado</span>
-                }
+                {{ tipoProducto.descripcion| trim : 25 }}
               </td>
               
-             
+
               <td>
                 <div class="btn-group" role="group" aria-label="Basic example">
-                  <button type="button" class="btn btn-success" (click)="view(oProveedor)">
-                    <i class="bi bi-eye icon-15"></i>
-                  </button>
-                  <button type="button" class="btn btn-warning icon-15" (click)="edit(oProveedor)">
-                    <i class="bi bi-pen"></i>
-                  </button>
-                  <button type="button" class="btn btn-danger icon-15" (click)="remove(oProveedor)">
-                    <i class="bi bi-trash"></i>
+                  <button type="button" class="btn btn-success" (click)="select(tipoProducto)">
+                    <i class="bi bi-check2-circle icon-15"></i>
                   </button>
                 </div>
               </td>
             </tr>
             } @empty {
             <tr>
-              <td colspan="6">No hay Proveedores</td>
+              <td colspan="11">No hay tipoProductos</td>
             </tr>
             }
           </tbody>
