--- a/src/app/component/producto/producto.admin.view.routed/producto.admin.view.routed.component.html
+++ b/src/app/component/producto/producto.admin.view.routed/producto.admin.view.routed.component.html
@@ -29,18 +29,21 @@
             }
           </td>
         </tr>
-        <tr>
-          <!-- Foto del DNI -->
-          <tr class="text-center">
-            <th scope="row" class="bg-primary text-white text-end pe-5">Imagen</th>
-            <td class="text-start ps-5">
+        <tr class="text-center">
+          <th scope="row" class="bg-primary text-white text-end pe-5">Imagen</th>
+          <td class="text-start ps-5">
+            <ng-container *ngIf="imagen; else sinImagen">
               <img 
                 [src]="imagen"
-                alt="Imagen del proveedor"
-                style="width: 120px; height: 120px; object-fit: cover; border: 1px solid #ccc; border-radius: 8px;"
-              />
-            </td>
+                alt="Imagen del producto"
+                style="width: 250px; height: 150px; object-fit: cover; border: 1px solid #ccc; border-radius: 8px;" />
+            </ng-container>
+            <ng-template #sinImagen>
+              <span class="text-muted">Imagen no disponible</span>
+            </ng-template>
+          </td>
         </tr>
+        
       </tbody>
     </table>
   </div>
