--- a/src/app/component/producto/producto.admin.view.routed/producto.admin.view.routed.component.html
+++ b/src/app/component/producto/producto.admin.view.routed/producto.admin.view.routed.component.html
@@ -1,4 +1,3 @@
-
 <div class="row justify-content-center m-3">
   <div class="col-lg-7 col-md-10 col-sm-12">
     <h1 class="my-5 text-center">
@@ -14,54 +13,87 @@
           <td class="text-start ps-5">{{ oProducto.codigo }}</td>
         </tr>
         <tr class="text-center">
-          <th scope="row" class="bg-primary text-white text-end pe-5">
-            Nombre
-          </th>
+          <th scope="row" class="bg-primary text-white text-end pe-5">Nombre</th>
           <td class="text-start ps-5">{{ oProducto.nombre }}</td>
         </tr>
         <tr class="text-center">
           <th scope="row" class="bg-primary text-white text-end pe-5">Tipo de Producto</th>
           <td class="text-start ps-5">
-            @if (oProducto.tipoproducto) {
-              {{ oProducto.tipoproducto.descripcion }} ID: {{ oProducto.tipoproducto.id }}
-            } @else {
-              <span class="text-muted">Sin tipo de producto asignado</span>
-            }
-          </td>
-        </tr>
-        <tr class="text-center">
-          <th scope="row" class="bg-primary text-white text-end pe-5">Imagen</th>
-          <td class="text-start ps-5">
-            <ng-container *ngIf="imagen; else sinImagen">
-              <img 
-                [src]="imagen"
-                alt="Imagen del producto"
-                style="width: 250px; height: 150px; object-fit: cover; border: 1px solid #ccc; border-radius: 8px;" />
+            <ng-container *ngIf="oProducto.tipoproducto; else noTipo">
+              {{ oProducto.tipoproducto.descripcion }} (ID: {{ oProducto.tipoproducto.id }})
             </ng-container>
-            <ng-template #sinImagen>
-              <span class="text-muted">Imagen no disponible</span>
+            <ng-template #noTipo>
+              <span class="text-muted">Sin tipo de producto asignado</span>
             </ng-template>
           </td>
         </tr>
-        
+        <tr class="text-center">
+          <th scope="row" class="bg-primary text-white text-end pe-5">Imágenes</th>
+          <td class="text-start ps-5">
+            <ng-container *ngIf="oProducto && oProducto.imagenes && oProducto.imagenes.length > 0; else sinImagenes">
+              <div
+                #carouselProductoImagenes
+                id="carouselProductoImagenes"
+                class="carousel slide"
+                data-bs-ride="carousel"
+              >
+                <div class="carousel-inner">
+                  <div
+                    class="carousel-item"
+                    *ngFor="let img of oProducto.imagenes; let i = index"
+                    [class.active]="i === 0"
+                  >
+                    <img
+                      [src]="'http://localhost:8086' + img.imagenUrl"
+                      class="d-block w-100"
+                      alt="Imagen del producto"
+                      style="max-height: 300px; object-fit: contain; border-radius: 8px"
+                    />
+                  </div>
+                </div>
+
+                <div class="text-center mt-2" *ngIf="totalImagenes > 1">
+                  Total de Imágenes: {{ totalImagenes }}
+                </div>
+
+                <button
+                  class="carousel-control-prev"
+                  type="button"
+                  data-bs-target="#carouselProductoImagenes"
+                  data-bs-slide="prev"
+                >
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Anterior</span>
+                </button>
+                <button
+                  class="carousel-control-next"
+                  type="button"
+                  data-bs-target="#carouselProductoImagenes"
+                  data-bs-slide="next"
+                >
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Siguiente</span>
+                </button>
+              </div>
+            </ng-container>
+            <ng-template #sinImagenes>
+              <span class="text-muted">No hay imágenes disponibles</span>
+            </ng-template>
+          </td>
+        </tr>
       </tbody>
     </table>
   </div>
 
- 
-
   <div class="d-flex justify-content-center mt-4">
     <a class="btn btn-warning mt-4 mx-1" href="/admin/producto/plist">
-      <i class="bi bi-list"></i>
-      Ir a listado de Productos
+      <i class="bi bi-list"></i> Ir a listado de Productos
     </a>
-    <a class="btn btn-primary mt-4 mx-1" href="admin/producto/edit/{{ oProducto.codigo }}">
-      <i class="bi bi-pencil"></i>
-      Editar
+    <a class="btn btn-primary mt-4 mx-1" [routerLink]="['/admin/producto/edit', oProducto.codigo]">
+      <i class="bi bi-pencil"></i> Editar
     </a>
-    <a class="btn btn-danger mt-4 mx-1" href="admin/producto/delete/{{ oProducto.codigo }}">
-      <i class="bi bi-trash"></i>
-      Borrar
+    <a class="btn btn-danger mt-4 mx-1" [routerLink]="['/admin/producto/delete', oProducto.codigo]">
+      <i class="bi bi-trash"></i> Borrar
     </a>
   </div>
 </div>
